[package]
name = "blaze"
version = "0.1.0"
edition = "2021"

[lib]
name = "blaze"
crate-type = ["cdylib"]

[profile.release]
lto = true

[target.'cfg(windows)'.dependencies]
toy-arms = { path = "./toy-arms" }
toy-arms_derive = { package = "toy-arms_derive", path = "./toy-arms_derive" }
winapi = { version = "0.3.9", features = ["minwindef"] }
anyhow = "1.0.86"
lazy_static = "1.4.0"
minhook-sys = "0.1.1"