[package]
name = "toy-arms"
version = "0.9.6"
edition = "2021"
authors = ["s3pt3mb3r <s3pt3mb3r@protonmail.com>"]
description = "A crates designed to ease game hacking in rust."
license = "MIT"
keywords = ["gamehack", "cheat", "windows", "memory"]
repository = "https://github.com/implicitlycorrect/toy-arms"
readme = "README.md"

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "consoleapi", "libloaderapi", "psapi", "processthreadsapi", "memoryapi", "winnt"] }
smartstring = "1.0.1"
regex = "1.5.5"
anyhow = "1.0.86"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "aarch64-pc-windows-msvc",
    "i686-pc-windows-msvc",
    "x86_64-pc-windows-msvc",
]